1. Fix for bug #424 - alignment of nested tables is now much better.

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -229,12 +229,12 @@ input:focus, select:focus, textarea:focus {
 .rowButton {
     font-size: 10px;
     padding: 0 5px;
-    width: 20px;
+    width: 30px;
 }
 .rowButton a {
     background: url(../images/skin/house.png) center left no-repeat;
     font-weight: bold;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 5px 10px 10px;
 }
 .rowButton a.show {
     background: url(../images/skin/information.png) center no-repeat;
@@ -300,7 +300,7 @@ table.nested td, table.nested th {
     padding: 0px;
     text-align: left;
     vertical-align: top;
-    width:0%;
+/*    width:0%;*/
 }
 
 table {
